--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="#studio">Студія</a>
             </li>
             <li>
-                <a href="#portfolio">Портфоліо</a>
+                <a href="./portfolio.html">Портфоліо</a>
             </li>
             <li>
                 <a href="#contacts">Контакти</a>
@@ -26,9 +26,6 @@
             </li>
             <li>
                 <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
-            </li>
-            <li>
-                <a href="./portofolio.html">Портфоліо</a>
             </li>
         </ul>
     </nav>
