--- a/index.html
+++ b/index.html
@@ -60,33 +60,33 @@
     </section>
     <section>
         <h2>Чим ми займаємося</h2>
-    <img src="image/eff34a388bbc6409758a002e5a58c3ca.jpg" alt="someone working with computer" width="150">
-    <img src="image/fe209b7db875477ca0f844823574082d.jpg" alt="women and phone" width="150">
-    <img src="image/ff490664ba91f138b9f708e01d65306a.jpg" alt="someone making a design" width="150">
+    <img src="./img/1.2.jpg" alt="someone working with computer" width="150">
+    <img src="./img/2.2.jpg" alt="women and phone" width="150">
+    <img src="./img/3.2.jpg" alt="someone making a design" width="150">
     </section>
     <section style="background-color: darkgray;">
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="image/01b0562402f9066520924acac0be8dc7.jpg" alt="man" width="120">
+                <img src="./img/4.2.jpg" alt="man" width="120">
                 <h3>Ігор Дем'яненко</h3>
                 <p>Product Designer
                 </p>
             </li>
             <li>
-                <img src="image/8ed9ff0c05008e3e7ae5285b05efd211.jpg" alt="woman" width="150">
+                <img src="./img/5.2.jpg" alt="woman" width="150">
                 <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer
                 </p>
             </li>
             <li>
-                <img src="image/c03fb848ed9dfc89543bbe97156c3661.jpg" alt="man" width="150">
+                <img src="./img/6.2.jpg" alt="man" width="150">
                 <h3>Микола Тарасов</h3>
                     <p>Marketing
                 </p>
             </li>
             <li>
-                <img src="image/7ff905b2d5f56aa0d2b29aa48e997cd8.jpg" alt="man" width="150">
+                <img src="./img/7.2.jpg" alt="man" width="150">
                 <h3>Михайло Єрмаков</h3>
                     <p>UI Designer
                 </p>
