--- a/portfolio.html
+++ b/portfolio.html
@@ -52,47 +52,47 @@
                <section>
                 <ul>
                     <li>
-                        <img src="./image/img.png" alt="laptop" width="370">
+                        <img src="./img/1.png" alt="laptop" width="370">
                         <h3>Технокряк</h3>
                         <p>Веб-сайт</p>
                     </li>
                     <li>
-                        <img src="./image/2af7c242b4ca1f507cebceb1a12a0d5e.jpg" alt="two guys" width="370">
+                        <img src="./img/2.jpg" alt="two guys" width="370">
                         <h3>Постер New Orlean vs Golden Star</h3>
                         <p>Дизайн</p>
                     </li>
                     <li>
-                        <img src="./image/1a433c208105e34dc9868a3bff6ab127.jpg" alt="poster" width="370">
+                        <img src="./img/3.jpg" alt="poster" width="370">
                         <h3>Ресторан Seafood</h3>
                         <p>Додаток</p>
                     </li>
                     <li>
-                        <img src="./image/ba4be2b1f0cfb199e4af12cdfc7deb53.jpg" alt="headphones" width="370">
+                        <img src="./img/4.jpg" alt="headphones" width="370">
                         <h3>Проєкт Prime</h3>
                         <p>Маркетинг</p>
                     </li>
                     <li>
-                        <img src="./image/096c3e96fbdfa1efd6ca17564f4b60ac.jpg" alt="boxes" width="370">
+                        <img src="./img/5.jpg" alt="boxes" width="370">
                         <h3>Проєкт Boxes</h3>
                         <p>Додаток</p>
                     </li>
                     <li>
-                        <img src="./image/35cc11f87c4be2640549c8b71a221417.jpg" alt="computer" width="370">
+                        <img src="./img/6.jpg" alt="computer" width="370">
                         <h3>Inspiration has no Borders</h3>
                         <p>Веб-сайт</p>
                     </li>
                     <li>
-                        <img src="./image/9883873751631631df6d5595b83d684c.jpg" alt="magazine" width="370">
+                        <img src="./img/7.jpg" alt="magazine" width="370">
                         <h3>Видання Limited Edition</h3>
                         <p>Дизайн</p>
                     </li>
                     <li>
-                        <img src="./image/22b3731453c05728d01567341b63797c.jpg" alt="little thing" width="370">
+                        <img src="./img/8.jpg" alt="little thing" width="370">
                         <h3>Проєкт LAB</h3>
                         <p>Маркетинг</p>
                     </li>
                     <li>
-                        <img src="./image/dc8bd39cf3d9ed5df9520ffb8173dc62.jpg" alt="laptop" width="370">
+                        <img src="./img/9.jpg" alt="laptop" width="370">
                         <h3>Growing Business</h3>
                         <p>Додаток</p>
                     </li>
